--- a/sito/ITALIANO/Ventola.html
+++ b/sito/ITALIANO/Ventola.html
@@ -85,7 +85,7 @@
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">La ventola &egrave; un piccolo dispositivo fornito di un girante che, azionato da un motore, muove un flusso areoforme di aria.</p>
+                        <p class="testobase">La ventola &egrave; un piccolo dispositivo fornito di un girante, che, azionato da un motore, muove un flusso d’aria.</p>
                         <p class="aprezzo">0,50 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
