--- a/sito/ITALIANO/fotoresistore.html
+++ b/sito/ITALIANO/fotoresistore.html
@@ -85,7 +85,7 @@
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Il fotoresistore &egrave; un componente la cui resistenza dipende dalla quantit&Agrave; di luce che lo colpisce. Funziona come un normale resistore, ma la sua resistenza diminuisce all'aumentare della quantit&agrave; di luce che la percuote.</p>
+                        <p class="testobase">Il fotoresistore &egrave; un componente la cui resistenza dipende dalla quantit&agrave; di luce che lo colpisce. Funziona come un normale resistore, ma la sua resistenza diminuisce all'aumentare della luminosit&agrave;</p>
                         <p class="aprezzo">0,95 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
