--- a/sito/ITALIANO/panelloLCD.html
+++ b/sito/ITALIANO/panelloLCD.html
@@ -81,11 +81,13 @@
             <div class="body">
                 <div>
                     <img class="imgdettaglio2" src="../immagini/displaylcd.jpg" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Panello LCD </div>
+                    <div class="titolodettaglio2"> Pannello LCD </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Il panello LCD &egrave; un display che utilliza la propriet&agrave; di modulazione della luce dei cristalli liquidi. Utilizzato come dispositivo di visualizzazione in una vasta gamma di applicazioni.</p>
+                        <p class="testobase">
+                            Il pannello LCD &egrave; un display che utilizza la propriet&Agrave; di modulazione della luce dei cristalli liquidi. Viene utilizzato come dispositivo di visualizzazione in una vasta gamma di applicazioni.
+                        </p>
                         <p class="aprezzo">2,00 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
