--- a/sito/ITALIANO/pompadiirrigazione.html
+++ b/sito/ITALIANO/pompadiirrigazione.html
@@ -85,7 +85,7 @@
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">La pompa di irrigazione &egrave; composta da una o pi&ugrave; giranti che permette di regolare la pressione dell'acqua che usce dalla pompa d'acqua.</p>
+                        <p class="testobase">La pompa di irrigazione &egrave; composta da uno o più giranti, che permettono di regolare la pressione dell'acqua che fuoriesce.</p>
                         <p class="aprezzo">0,87 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
