--- a/sito/ITALIANO/powerbank.html
+++ b/sito/ITALIANO/powerbank.html
@@ -85,7 +85,9 @@
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Il powerbank &egrave; una batteria ricaricabile portatile che viene usato per ricaricare apparechiature elettronoche, a seconda delle carrateristiche del dispositivo.</p>
+                        <p class="testobase">
+                            Il powerbank &egrave; una batteria ricaricabile portatile, che viene usata per ricaricare apparecchiature elettroniche, a seconda delle caratteristiche del dispositivo.
+                        </p>
                         <p class="aprezzo">9,77 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
