--- a/sito/ITALIANO/relay.html
+++ b/sito/ITALIANO/relay.html
@@ -85,7 +85,7 @@
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase"> Il relay ha il compito di collegare un interruttore ad un circuito di corrente; ha un'importanza cruciale</p>
+                        <p class="testobase">Il relay ha il compito di collegare un interruttore ad un circuito di corrente.</p>
                         <p class="aprezzo">0,80 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
