--- a/sito/ITALIANO/sensorebluetooth.html
+++ b/sito/ITALIANO/sensorebluetooth.html
@@ -85,7 +85,7 @@
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Il sensore bluetooth &egrave; un piccolo trasmettitore che trasmette segnali per chiudire dispositivi portatili utilizzando la tecnologia Bluetooth. Il suo raggio di azione &egrave; di 90 metri.</p>
+                        <p class="testobase">Il sensore Bluetooth &egrave; un piccolo trasmettitore di segnali che ha la funzione di chiudere i dispositivi portatili utilizzando l'omonima tecnologia. Il suo raggio d'azione &egrave; di 90 metri</p>
                         <p class="aprezzo">??? &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
