--- a/sito/ITALIANO/sensorediumiditànelterreno.html
+++ b/sito/ITALIANO/sensorediumiditànelterreno.html
@@ -81,11 +81,11 @@
             <div class="body">
                 <div>
                     <img class="imgdettaglio2" src="../immagini/umterreno.jpg" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Sensore di umidità nel terreno </div>
+                    <div class="titolodettaglio2"> Sensore di umidità del terreno </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Il sensore di umidit&agrave; nel terreno &egrave; un dispositivo che permette di misurare la quantit&agrave; di acqua all'interno del terreno per poter determinare la uniformit&agrave; delle condizioni di crescit&agrave; delle piante.</p>
+                        <p class="testobase">Il sensore di umidità del terreno &egrave; un dispositivo che permette di misurare la quantit&agrave di acqua all'interno del terreno, per poter determinare l’uniformit&agrave delle condizioni di crescita delle piante.</p>
                         <p class="aprezzo">6,00 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
