--- a/sito/ITALIANO/sensoretemperatura.html
+++ b/sito/ITALIANO/sensoretemperatura.html
@@ -81,11 +81,11 @@
             <div class="body">
                 <div>
                     <img class="imgdettaglio2" src="../immagini/senstemp.jpg" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Sensore di Temperatura </div>
+                    <div class="titolodettaglio2"> Sensore di temperatura </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Il sensore di temperature &egrave; un componente che rileva e misura la variazione di temperatura in rapporto tra la temperatura e la resistenza del materiale.</p>
+                        <p class="testobase">Il sensore di temperatura &egrave; un componente che ne rileva e misura le variazioni, tramite il rapporto tra la temperatura e la resistenza del materiale.</p>
                         <p class="aprezzo">7,00 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
