--- a/sito/ITALIANO/serra1base.html
+++ b/sito/ITALIANO/serra1base.html
@@ -80,7 +80,10 @@
                     </div>
                     <div>
                         <div class="rt">
-                            <p class="testobase">La nostra mini-serra è stata progettata per soddisfare tutti i tipi di clienti: dalle persone che vogliono risparmiare a quelle che vogliono una serra completamente indipendente. Puoi scegliere tra tre modelli differenti, uno dedicato al risparmi, una versione semi-indipendente ed economica e una progettata per essere completamente indipendente.</p>
+                            <p class="testobase">
+                                La nostra mini-serra è stata progettata per soddisfare tutti i tipi di cliente: dalle persone che vogliono risparmiare, a quelle che vogliono una serra completamente autonoma.
+                                <br />Potete scegliere tra tre modelli differenti: uno più economico, una versione semi-indipendente e conveniente e una progettata per essere completamente autoregolata
+                            </p>
                         </div>
                         
                     </div>
