--- a/sito/ITALIANO/sensorediumidità.html
+++ b/sito/ITALIANO/sensorediumidità.html
@@ -85,7 +85,9 @@
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Il sensore di umidità viene usato per permettere di trasformare il parametro "umidit&agrave; relativa", in poche parole per misurare l'umidit&agrave; nell'ambiente, e trasformarlo in un segnale elettrico.</p>
+                        <p class="testobase">
+                            Il sensore di umidità viene usato per permettere di trasformare il parametro "umidità relativa", cioè per misurare l'umidità nell'ambiente e trasformarlo in un segnale elettrico.
+                        </p>
                         <p class="aprezzo">0,68 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
