--- a/sito/ITALIANO/sensoreultrasuoni.html
+++ b/sito/ITALIANO/sensoreultrasuoni.html
@@ -81,11 +81,13 @@
             <div class="body">
                 <div>
                     <img class="imgdettaglio2" src="../immagini/sensultrasuoni.jpg" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Sensore Ultrasuoni </div>
+                    <div class="titolodettaglio2"> Sensore ultrasuoni </div>
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Il sensore ad ultrasuoni &egrave; in grado di rilevare oggetti senza contatto e misurare la distanza degli oggetti dal sensore e per farlo invia degli impulsi sonori ad alta frequenza.</p>
+                        <p class="testobase">
+                            Il sensore ad ultrasuoni &egrave in grado di rilevare oggetti senza contatto e misurare la loro distanza dal sensore, inviando degli impulsi sonori ad alta frequenza.
+                        </p>
                         <p class="aprezzo">0,80 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
