--- a/sito/ITALIANO/servomotore.html
+++ b/sito/ITALIANO/servomotore.html
@@ -52,7 +52,7 @@
 
         <hr class="a" />
         <div id="menu">
-            <!--Men˘ di navigazione-->
+            <!--MenÔøΩ di navigazione-->
             <div class="testo">
                 <a href="index.html">MEN&Ugrave;</a>
             </div>
@@ -85,7 +85,9 @@
                 </div>
                 <div>
                     <div class="rt">
-                        <p class="testobase">Il servomotore &egrave; un tipo di motore che permette, anche per le sue piccole dimensioni, un lavoro ampio sulla velocit&agrave;, sulla coppia motrice, sull'accelerazione angolare, sulla durata del ciclo operativo e sulla velocit&agrave; angolare.</p>
+                        <p class="testobase">
+                            Il servomotore permette, anche grazie alle sue piccole dimensioni, un lavoro ampio sulla velocit&agrave;, sulla coppia motrice, sull'accelerazione angolare, sulla relativa velocit√† e sul ciclo operativo.
+                        </p>
                         <p class="aprezzo">3,75 &euro;</p>
                         <div class="abuy3">
                             <p><strong>COMPRA</strong></p>
