--- a/sito/ITALIANO/index.html
+++ b/sito/ITALIANO/index.html
@@ -100,7 +100,7 @@
 						<h3 class="home2 animate__animated animate__flipInX animate__delay-1s">video presentazione dell'azienda</h3>
 						<div class="videoserra  animate__animated animate__fadeIn animate__delay-2s">
 							<video width="850px" height="500px"  controls>
-								<source src="Paolo.mp4" type="video/mp4">
+								<source src="../immagini/Paolo.mp4" type="video/mp4">
 							</video>
 						</div>
 					</div>
