--- a/sito/ITALIANO/chisiamo.html
+++ b/sito/ITALIANO/chisiamo.html
@@ -92,7 +92,7 @@
 								</div>
 						</div>
 						<div>
-							<h1> Il nostro team</h1>
+							<h1 class="chisiamo2"> IL NOSTRO TEAM</h1>
 								<div>
 									<div class="avatar">
 										<figure>
