--- a/sito/INGLESE/breadboardinglese.html
+++ b/sito/INGLESE/breadboardinglese.html
@@ -28,6 +28,11 @@
 			<div class="name">
 				<h1>S P R O U T</h1>
 			</div>
+
+
+
+
+
 			<div id="hormenu">
 				<!-- div che contiene il menu -->
 				<ul>
@@ -44,6 +49,22 @@
 				</ul>
 			</div>
 
+
+
+
+
+			<!--	<div id = "cambio">
+
+							<a href = "index.html">Lingua</a>
+							<ul>
+								<li><a href="#">Italiano</a></li>
+								<li><a href="#">Inglese</a></li>
+							</ul>
+							</li>
+						</ul>
+					</table>
+				</div> -->
+
 			<div class="subname">
 				<h3>Sustainable Project Related to Our Useful Tools</h3>
 			</div>
@@ -56,13 +77,13 @@
 				<a href="indexinglese.html">MEN&Ugrave;</a>
 			</div>
 			<div class="testo">
-				<a href="modellograficoinglese.html">DATA</a>
+				<a href="graficiinglese.html" class="grafico">DATA</a>
 			</div>
 			<div class="testo">
 				<a href="chisiamoinglese.html">ABOUT US</a>
 			</div>
 			<div class="testo">
-				<a href="inostriprodottiinglese.html" class="menuz">OUR PRODUCTS</a>
+				<a href="inostriprodottiinglese.html">OUR PRODUCTS</a>
 			</div>
 			<div class="testo">
 				<a href="arduinoinglese.html">ARDUINO</a>
@@ -78,50 +99,20 @@
 		<section class="layout">
 			<div class="leftSide"></div>
 			<div class="body">
-				<div class="centercaselle">
-					<a href="serra1baseinglese.html">
-						<div class="caselle">
-							<img class="img" src="immagini/arduino.jpg">
-							<figcaption>GreenHouse 1.0  S P R O U T<br />a greenhouse for everybody</figcaption>
-						</div>
-					</a>
-					<a href="arduinoinglese.html">
-						<div class="caselle">
-							<img class="img" src="../../immagini/arduino.jpg">
-							<figcaption>Arduino<br />Arduino chip 1.0</figcaption>
-						</div>
-					</a>	
-					<a href="breadboardinglese.html">
-						<div class="caselle">
-							<img class="img" src="../../immagini/breadbrd.JPG">
-							<figcaption>Breadboard<br />Breadboard connected</figcaption>
-						</div>
-					</a>
-					<div class="caselle">
-						<img class="img" src="../../immagini/sens temp.jpg">
-						<figcaption>Temperature sensor<br /><br /></figcaption>
-					</div>
-					<div class="caselle">
-						<img class="img" src="../../immagini/motore.JPG">
-						<figcaption>servomotor X4<br /><br /></figcaption>
-					</div>
-					<div class="caselle">
-						<img class="img" src="../../immagini/sens umidita.JPG">
-						<figcaption>Humidity sensor<br /><br /></figcaption>
-					</div>
-					<div class="caselle">
-						<img class="img" src="../../immagini/sens blut.JPG">
-						<figcaption>Bluethoot sensor<br /><br /></figcaption>
-					</div>
-					<div class="caselle">
-						<img class="img" src="../../immagini/fotoresistore.JPG">
-						<figcaption>Photoresistor<br /><br /></figcaption>
-					</div>
-					<div class="caselle">
-						<img class="img" src="../../immagini/pompa.JPG">
-						<figcaption>Irrigation Pump<br /><br /></figcaption>
-					</div>
-				</div>
+				<div>
+                    <img class="imgdettaglio2" src="../immagini/breadboar.jpg" width="250px" height="300px" />
+                    <div class="titolodettaglio2"> Arduino 1.0 </div>
+                </div>
+                <div>
+                    <div class="rt">
+                        <p class="testobase">BreadBoard is a device printed and used to create prototypes of electrical circuits. It consists in a plastic base connected electrically to holes through metallical clips, and each one of them is  </p>
+                        <p class="aprezzo">4,99 &euro;</p>
+                        <div class="abuy3">
+                            <p><strong>BUY</strong></p>
+                        </div>
+                    </div>
+
+                </div>
 			</div>
 			<div class="rightSide"></div>
 			<div class="footer">
@@ -138,7 +129,5 @@
 				<a href="https://twitter.com/CarpiSprout" target="new_blank"><img src="../immagini/logo twitter.png" class="imt" /></a>
 			</div>
 		</section>
-		</section>
-
 </body>
 </html>
