--- a/sito/ITALIANO/download.html
+++ b/sito/ITALIANO/download.html
@@ -45,8 +45,8 @@
 						<li>
 						<a class = "lingua">Lingua</a> <!-- primo list-item, prima voce del menu -->
 							<ul> <!-- Lista annidata: voci del sotto-menu -->
-							<li><a href="index.html">Italiano</a></li>
-							<li><a href="../inglese/indexinglese.html">Inglese</a></li>
+							<li><a href="arduinoallabase.html">Italiano</a></li>
+							<li><a href="../inglese/downloadinglese.html">Inglese</a></li>
 							</ul> <!-- Fine del sotto-menu -->
 						</li> <!-- Chiudo il list-item -->
 						<!--qui altri list-item -->
@@ -73,7 +73,7 @@
 				  <a href ="inostriprodotti.html">I NOSTRI PRODOTTI</a>
 				</div>
 				<div class="testo">
-					<a href="arduionoallabase.html" class="menuz">DOWNLOAD</a>
+					<a href="download.html" class="menuz">DOWNLOAD</a>
 				</div>
 				<div class="testo">
 					<a href="login.html">LOGIN</a>
