--- a/sito/INGLESE/graficiinglese.html
+++ b/sito/INGLESE/graficiinglese.html
@@ -41,8 +41,8 @@
 						<a class="lingua">Language</a> <!-- primo list-item, prima voce del menu -->
 						<ul>
 							<!-- Lista annidata: voci del sotto-menu -->
-							<li><a href="../italiano/index.html">Italian</a></li>
-							<li><a href="indexinglese.html">English</a></li>
+							<li><a href="../italiano/modellografico.html">Italian</a></li>
+							<li><a href="graficiinglese.html">English</a></li>
 						</ul> <!-- Fine del sotto-menu -->
 					</li> <!-- Chiudo il list-item -->
 					<!--qui altri list-item -->
