--- a/sito/ITALIANO/fotoresistore.html
+++ b/sito/ITALIANO/fotoresistore.html
@@ -66,7 +66,7 @@
                 <a href="inostriprodotti.html">I NOSTRI PRODOTTI</a>
             </div>
             <div class="testo">
-                <a href="arduionoallabase.html">DOWNLOAD</a>
+                <a href="download.html">DOWNLOAD</a>
             </div>
             <div class="testo">
                 <a href="login.html">LOGIN</a>
