--- a/sito/ITALIANO/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti.html
@@ -33,8 +33,8 @@
 						<li>
 						<a class = "lingua">Lingua</a> <!-- primo list-item, prima voce del menu -->
 							<ul> <!-- Lista annidata: voci del sotto-menu -->
-							<li><a href="index.html">Italiano</a></li>
-							<li><a href="../inglese/indexinglese.html">Inglese</a></li>
+							<li><a href="inostriprodotti.html">Italiano</a></li>
+							<li><a href="../inglese/inostriprodottiinglese.html">Inglese</a></li>
 							</ul> <!-- Fine del sotto-menu -->
 						</li> <!-- Chiudo il list-item -->
 						<!--qui altri list-item -->
@@ -62,7 +62,7 @@
               <a href="inostriprodotti.html">I NOSTRI PRODOTTI</a>
           </div>
           <div class="testo">
-              <a href="arduionoallabase.html">DOWNLOAD</a>
+              <a href="download.html">DOWNLOAD</a>
           </div>
           <div class="testo">
               <a href="login.html">LOGIN</a>
