--- a/sito/ITALIANO/login.html
+++ b/sito/ITALIANO/login.html
@@ -44,8 +44,8 @@
 						<li>
 						<a class = "lingua">Lingua</a> <!-- primo list-item, prima voce del menu -->
 							<ul> <!-- Lista annidata: voci del sotto-menu -->
-							<li><a href="index.html">Italiano</a></li>
-							<li><a href="../inglese/indexinglese.html">Inglese</a></li>
+							<li><a href="login.html">Italiano</a></li>
+							<li><a href="../inglese/logininglese.html">Inglese</a></li>
 							</ul> <!-- Fine del sotto-menu -->
 						</li> <!-- Chiudo il list-item -->
 						<!--qui altri list-item -->
@@ -72,7 +72,7 @@
 				  <a href ="inostriprodotti.html">I NOSTRI PRODOTTI</a>
 				</div>
 				<div class="testo">
-					<a href="arduionoallabase.html">DOWNLOAD	</a>
+					<a href="download.html">DOWNLOAD</a>
 				</div>
 				<div class="testo">
 					<a href="login.html" class = "menuz">LOGIN</a>
