--- a/sito/INGLESE/inostriprodottiinglese.html
+++ b/sito/INGLESE/inostriprodottiinglese.html
@@ -79,24 +79,18 @@
 			<div class="leftSide"></div>
 			<div class="body">
 				<div class="centercaselle">
-					<a href="serra1baseinglese.html">
 						<div class="caselle">
 							<img class="img" src="immagini/arduino.jpg">
 							<figcaption>GreenHouse 1.0  S P R O U T<br />a greenhouse for everybody</figcaption>
 						</div>
-					</a>
-					<a href="arduinoinglese.html">
 						<div class="caselle">
-							<img class="img" src="../../immagini/arduino.jpg">
-							<figcaption>Arduino<br />Arduino chip 1.0</figcaption>
+							<a href="arduinoinglese.html"><img class="img" src="../../immagini/arduino.jpg">
+							<figcaption>Arduino<br />Arduino chip 1.0</figcaption></a>
 						</div>
-					</a>	
-					<a href="breadboardinglese.html">
 						<div class="caselle">
 							<img class="img" src="../../immagini/breadbrd.JPG">
 							<figcaption>Breadboard<br />Breadboard connected</figcaption>
 						</div>
-					</a>
 					<div class="caselle">
 						<img class="img" src="../../immagini/sens temp.jpg">
 						<figcaption>Temperature sensor<br /><br /></figcaption>
