--- a/sito/INGLESE/chisiamoinglese.html
+++ b/sito/INGLESE/chisiamoinglese.html
@@ -147,7 +147,7 @@
 							<figure>
 								<img src="../immagini/Lorenzo Bergianti.png" width="200px" height="200px" />
 								<figcaption style="text-align: center; font-weight: bold;">Bergianti Lorenzo</figcaption>
-								<figcaption style="text-align: center;">Web Developers - Gruppo A</figcaption>
+								<figcaption style="text-align: center;">Web Developers - Group A</figcaption>
 							</figure>
 						</div>
 						<div class="avatar">
@@ -161,21 +161,21 @@
 							<figure>
 								<img src="../immagini/Alessandro Fusari.png" width="200px" height="200px" />
 								<figcaption style="text-align: center; font-weight: bold;">Fusari Alessandro</figcaption>
-								<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
+								<figcaption style="text-align: center;">Marketing Team - Promotions</figcaption>
 							</figure>
 						</div>
 						<div class="avatar">
 							<figure>
 								<img src="../immagini/Galavotti Marco.png" width="200px" height="200px" />
 								<figcaption style="text-align: center; font-weight: bold;">Galavotti Marco</figcaption>
-								<figcaption style="text-align: center;">Responsabili - PM</figcaption>
+								<figcaption style="text-align: center;">Responsible - PM</figcaption>
 							</figure>
 						</div>
 						<div class="avatar">
 							<figure>
 								<img src="../immagini/Nicholas Giacobbe.png" width="200px" height="200px" />
 								<figcaption style="text-align: center; font-weight: bold;">Giacobbe Nicholas</figcaption>
-								<figcaption style="text-align: center;">Web Developers - Gruppo A</figcaption>
+								<figcaption style="text-align: center;">Web Developers - Group A</figcaption>
 							</figure>
 						</div>
 						<div class="avatar">
@@ -196,7 +196,7 @@
 							<figure>
 								<img src="../immagini/Impagliazzo Alberto.png" width="200px" height="200px" />
 								<figcaption style="text-align: center; font-weight: bold;">Impagliazzo Alberto</figcaption>
-								<figcaption style="text-align: center;">Web Developers - Gruppo B</figcaption>
+								<figcaption style="text-align: center;">Web Developers - Group B</figcaption>
 							</figure>
 						</div>
 						<div class="avatar">
@@ -210,7 +210,7 @@
 							<figure>
 								<img src="../immagini/Koci Flavio.png" width="200px" height="200px" />
 								<figcaption style="text-align: center; font-weight: bold;">Koci Flavio</figcaption>
-								<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
+								<figcaption style="text-align: center;">Marketing Team - Promotions</figcaption>
 							</figure>
 						</div>
 						<div class="avatar">
@@ -238,42 +238,42 @@
 							<figure>
 								<img src="../immagini/Rascutoi Emanuel.png" width="200px" height="200px" />
 								<figcaption style="text-align: center; font-weight: bold;">Rascutoi Emanuel</figcaption>
-								<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
+								<figcaption style="text-align: center;">Marketing Team - Promotions</figcaption>
 							</figure>
 						</div>
 						<div class="avatar">
 							<figure>
 								<img src="../immagini/Rebecchi Simone.png" width="200px" height="200px" />
 								<figcaption style="text-align: center; font-weight: bold;">Rebecchi Simone</figcaption>
-								<figcaption style="text-align: center;">Responsabili - PMO</figcaption>
+								<figcaption style="text-align: center;">Responsible - PMO</figcaption>
 							</figure>
 						</div>
 						<div class="avatar">
 							<figure>
 								<img src="../immagini/Rossi Achille.png" width="200px" height="200px" />
 								<figcaption style="text-align: center; font-weight: bold;">Rossi Achille</figcaption>
-								<figcaption style="text-align: center;">Web Developers - Gruppo B</figcaption>
+								<figcaption style="text-align: center;">Web Developers - Group B</figcaption>
 							</figure>
 						</div>
 						<div class="avatar">
 							<figure>
 								<img src="../immagini/Rossi Alex.png" width="200px" height="200px" />
 								<figcaption style="text-align: center; font-weight: bold;">Rossi Alex</figcaption>
-								<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
+								<figcaption style="text-align: center;">Marketing Team - Promotions</figcaption>
 							</figure>
 						</div>
 						<div class="avatar">
 							<figure>
 								<img src="../immagini/Rossi Matteo.png" width="200px" height="200px" />
 								<figcaption style="text-align: center; font-weight: bold;">Rossi Matteo</figcaption>
-								<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
+								<figcaption style="text-align: center;">Marketing Team - Promotions</figcaption>
 							</figure>
 						</div>
 						<div>
 							<figure class=" avatar">
 								<img src="../immagini/Federico Savani.png" width="200px" height="200px" class=" savani" />
 								<figcaption style="text-align: center; font-weight: bold;">Savani Federico</figcaption>
-								<figcaption style="text-align: center;">Marketing Team - Promozione</figcaption>
+								<figcaption style="text-align: center;">Marketing Team - Promotions</figcaption>
 							</figure>
 						</div>
 					</div>
