--- a/sito/ITALIANO/inostriprodotti.html
+++ b/sito/ITALIANO/inostriprodotti.html
@@ -124,7 +124,7 @@
                             </div>
                             <div class="caselle">
                                 <a href="powerbank.html">
-                                <img class="img" src="">
+                                <img class="img" src="../immagini/powerbank.jpg">
                                 <figcaption>Power Bank<br /><br /></figcaption></a>
                             </div>
                             <div class="caselle">
