--- a/sito/ITALIANO/powerbank.html
+++ b/sito/ITALIANO/powerbank.html
@@ -80,7 +80,7 @@
             <div class="leftSide"></div>
             <div class="body">
                 <div>
-                    <img class="imgdettaglio2" src="" width="250px" height="300px" />
+                    <img class="imgdettaglio2" src="../immagini/powerbank.jpg" width="250px" height="300px" />
                     <div class="titolodettaglio2"> Power Bank </div>
                 </div>
                 <div>
