--- a/sito/INGLESE/graficiinglese.html
+++ b/sito/INGLESE/graficiinglese.html
@@ -26,8 +26,8 @@
 						<li>
 						<a class = "lingua">Language</a> <!-- primo list-item, prima voce del menu -->
 							<ul> <!-- Lista annidata: voci del sotto-menu -->
-							<li><a href="modellografico.html">Italian</a></li>
-							<li><a href="../inglese/graficiinglese.html">English</a></li>
+							<li><a href="../ITALIANO/modellografico.html">Italian</a></li>
+							<li><a href="../INGLESE/graficiinglese.html">English</a></li>
 							</ul> <!-- Fine del sotto-menu -->
 						</li> <!-- Chiudo il list-item -->
 						<!--qui altri list-item -->
