--- a/sito/INGLESE/breadboardinglese.html
+++ b/sito/INGLESE/breadboardinglese.html
@@ -101,7 +101,7 @@
 			<div class="body">
 				<div>
                     <img class="imgdettaglio2" src="../immagini/breadboar.jpg" width="250px" height="300px" />
-                    <div class="titolodettaglio2"> Arduino 1.0 </div>
+                    <div class="titolodettaglio2"> Breadboard </div>
                 </div>
                 <div>
                     <div class="rt">
