--- a/sito/INGLESE/pompairrigazione.html
+++ b/sito/INGLESE/pompairrigazione.html
@@ -28,6 +28,11 @@
 			<div class="name">
 				<h1>S P R O U T</h1>
 			</div>
+
+
+
+
+
 			<div id="hormenu">
 				<!-- div che contiene il menu -->
 				<ul>
@@ -36,13 +41,29 @@
 						<a class="lingua">Language</a> <!-- primo list-item, prima voce del menu -->
 						<ul>
 							<!-- Lista annidata: voci del sotto-menu -->
-							<li><a href="../italiano/inostriprodotti.html">Italian</a></li>
-							<li><a href="inostriprodottiinglese.html">English</a></li>
+							<li><a href="../italiano/index.html">Italian</a></li>
+							<li><a href="indexinglese.html">English</a></li>
 						</ul> <!-- Fine del sotto-menu -->
 					</li> <!-- Chiudo il list-item -->
 					<!--qui altri list-item -->
 				</ul>
 			</div>
+
+
+
+
+
+			<!--	<div id = "cambio">
+
+							<a href = "index.html">Lingua</a>
+							<ul>
+								<li><a href="#">Italiano</a></li>
+								<li><a href="#">Inglese</a></li>
+							</ul>
+							</li>
+						</ul>
+					</table>
+				</div> -->
 
 			<div class="subname">
 				<h3>Sustainable Project Related to Our Useful Tools</h3>
@@ -53,19 +74,19 @@
 		<div id="menu">
 			<!--Menù di navigazione-->
 			<div class="testo">
-				<a href="indexinglese.html">HOME</a>
+				<a href="indexinglese.html">MEN&Ugrave;</a>
 			</div>
 			<div class="testo">
-				<a href="graficiinglese.html">DATA</a>
+				<a href="graficiinglese.html" class="grafico">DATA</a>
 			</div>
 			<div class="testo">
 				<a href="chisiamoinglese.html">ABOUT US</a>
 			</div>
 			<div class="testo">
-				<a href="inostriprodottiinglese.html" class="menuz">OUR PRODUCTS</a>
+				<a href="inostriprodottiinglese.html">OUR PRODUCTS</a>
 			</div>
 			<div class="testo">
-				<a href="downloadinglese.html">DOWNLOAD</a>
+				<a href="arduinoinglese.html">ARDUINO</a>
 			</div>
 			<div class="testo">
 				<a href="logininglese.html">LOGIN</a>
@@ -78,52 +99,20 @@
 		<section class="layout">
 			<div class="leftSide"></div>
 			<div class="body">
-				<div class="centercaselle">
-						<div class="caselle">
-							<a href="serra1baseinglese.html">
-							<img class="img" src="immagini/arduino.jpg">
-							<figcaption>GreenHouse 1.0  S P R O U T<br />a greenhouse for everybody</figcaption></a>
-						</div>
-						<div class="caselle">
-							<a href="arduinoinglese.html"><img class="img" src="../../immagini/arduino.jpg">
-							<figcaption>Arduino<br />Arduino chip 1.0</figcaption></a>
-						</div>
-						<div class="caselle">
-							<a href="breadboardinglese.html">
-							<img class="img" src="../../immagini/breadbrd.JPG">
-							<figcaption>Breadboard<br />Breadboard connected</figcaption></a>
-						</div>
-					<div class="caselle">
-						<a href="sensoretemperaturainglese.html">
-						<img class="img" src="../../immagini/sens temp.jpg">
-						<figcaption>Temperature sensor<br /><br /></figcaption></a>
-					</div>
-					<div class="caselle">
-						<a href="servomotoreinglese.html">
-						<img class="img" src="../../immagini/motore.JPG">
-						<figcaption>servomotor X4<br /><br /></figcaption></a>
-					</div>
-					<div class="caselle">
-						<a href="sensoreumiditainglese.html">
-						<img class="img" src="../../immagini/sens umidita.JPG">
-						<figcaption>Humidity sensor<br /><br /></figcaption></a>
-					</div>
-					<div class="caselle">
-						<a href="bluetoothinglese.html">
-						<img class="img" src="../../immagini/sens blut.JPG">
-						<figcaption>Bluethoot sensor<br /><br /></figcaption></a>
-					</div>
-					<div class="caselle">
-						<a href="fotoresistoreinglese.html">
-						<img class="img" src="../../immagini/fotoresistore.JPG">
-						<figcaption>Photoresistor<br /><br /></figcaption></a>
-					</div>
-					<div class="caselle">
-						<a href="pompairrigazione.html">
-						<img class="img" src="../../immagini/pompa.JPG">
-						<figcaption>Irrigation Pump<br /><br /></figcaption></a>
-					</div>
-				</div>
+				<div>
+                    <img class="imgdettaglio2" src="../immagini/pompa.png" width="250px" height="300px" />
+                    <div class="titolodettaglio2"> Irrigation pump </div>
+                </div>
+                <div>
+                    <div class="rt">
+                        <p class="testobase">The irrigation pump consists of one or more impellers, which allow you to adjust the pressure of the water that comes out.</p>
+                        <p class="aprezzo">0,87 &euro;</p>
+                        <div class="abuy3">
+                            <p><strong>BUY</strong></p>
+                        </div>
+                    </div>
+
+                </div>
 			</div>
 			<div class="rightSide"></div>
 			<div class="footer">
@@ -140,7 +129,5 @@
 				<a href="https://twitter.com/CarpiSprout" target="new_blank"><img src="../immagini/logo twitter.png" class="imt" /></a>
 			</div>
 		</section>
-		</section>
-
 </body>
 </html>
