--- a/sito/INGLESE/inostriprodottiinglese.html
+++ b/sito/INGLESE/inostriprodottiinglese.html
@@ -79,50 +79,83 @@
 			<div class="leftSide"></div>
 			<div class="body">
 				<div class="centercaselle">
+					<a href="serra1base.html">
 						<div class="caselle">
-							<a href="serra1baseinglese.html">
 							<img class="img" src="immagini/arduino.jpg">
-							<figcaption>GreenHouse 1.0  S P R O U T<br />a greenhouse for everybody</figcaption></a>
+							<figcaption>Serra 1.0 Marchio S P R O U T<br />una serra per ogni tipo di cliente</figcaption>
 						</div>
-						<div class="caselle">
-							<a href="arduinoinglese.html"><img class="img" src="../../immagini/arduino.jpg">
-							<figcaption>Arduino<br />Arduino chip 1.0</figcaption></a>
-						</div>
-						<div class="caselle">
-							<a href="breadboardinglese.html">
-							<img class="img" src="../../immagini/breadbrd.JPG">
-							<figcaption>Breadboard<br />Breadboard connected</figcaption></a>
-						</div>
+					</a>
 					<div class="caselle">
-						<a href="sensoretemperaturainglese.html">
-						<img class="img" src="../../immagini/sens temp.jpg">
-						<figcaption>Temperature sensor<br /><br /></figcaption></a>
+						<a href="arduino.html">
+						<img class="img" src="../immagini/arduino.jpg">
+						<figcaption>Arduino<br />scheda Arduino 1.0</figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="servomotoreinglese.html">
-						<img class="img" src="../../immagini/motore.JPG">
-						<figcaption>servomotor X4<br /><br /></figcaption></a>
+						<a href="breadboard.html">
+						<img class="img" src="../immagini/breadboar.jpg">
+						<figcaption>Breadboard<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="sensoreumiditainglese.html">
-						<img class="img" src="../../immagini/sens umidita.JPG">
-						<figcaption>Humidity sensor<br /><br /></figcaption></a>
+						<a href="sensoretemperatura.html">
+						<img class="img" src="../immagini/senstemp.jpg">
+						<figcaption>Sensore temperatura<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="bluetoothinglese.html">
-						<img class="img" src="../../immagini/sens blut.JPG">
-						<figcaption>Bluethoot sensor<br /><br /></figcaption></a>
+						<a href="servomotore.html">
+						<img class="img" src="../immagini/servomotore.jpg">
+						<figcaption>Servomotore X4<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="fotoresistoreinglese.html">
-						<img class="img" src="../../immagini/fotoresistore.JPG">
-						<figcaption>Photoresistor<br /><br /></figcaption></a>
+						<a href="sensorediumidità.html">
+						<img class="img" src="../immagini/sensum.jpg">
+						<figcaption>Sensore di umidità<br /><br /></figcaption></a>
 					</div>
 					<div class="caselle">
-						<a href="pompairrigazione.html">
-						<img class="img" src="../../immagini/pompa.JPG">
-						<figcaption>Irrigation Pump<br /><br /></figcaption></a>
+						<a href="sensorebluetooth.html">
+						<img class="img" src="../immagini/bluetht.jpg">
+						<figcaption>Modulo bluetooth<br /><br /></figcaption></a>
 					</div>
+					<div class="caselle">
+						<a href="fotoresistore.html">
+						<img class="img" src="../immagini/fotoresistore.jpg">
+						<figcaption>Fotoresistore<br /><br /></figcaption></a>
+					</div>
+					<div class="caselle">
+						<a href="pompadiirrigazione.html">
+						<img class="img" src="../immagini/pompa.png">
+						<figcaption>Pompa irrigazione<br /><br /></figcaption></a>
+					</div>
+					<div class="caselle">
+						<a href="powerbank.html">
+						<img class="img" src="../immagini/powerbank.jpg">
+						<figcaption>Power Bank<br /><br /></figcaption></a>
+					</div>
+					<div class="caselle">
+						<a href="sensorediumiditànelterreno.html">
+						<img class="img" src="../immagini/umterreno.jpg">
+						<figcaption>Sensore di umidità nel terreno<br /><br /></figcaption></a>
+					</div>
+					<div class="caselle">
+						<a href="Ventola.html">
+						<img class="img" src="../immagini/ventola.jpg">
+					   <figcaption>Ventola<br /><br /></figcaption></a>
+					</div>
+					<div class="caselle">
+						<a href="panelloLCD.html">
+						<img class="img" src="../immagini/displaylcd.jpg">
+						<figcaption>Panello LCD<br /><br /></figcaption></a>
+					</div>
+					<div class="caselle">
+						<a href="sensoreultrasuoni.html">
+						<img class="img" src="../immagini/sensultrasuoni.jpg">
+						<figcaption>Sensore Ultrasuoni<br /><br /></figcaption></a>
+					</div>
+					<div class="caselle">
+						<a href="relay.html">
+						<img class="img" src="../immagini/relay.jpg">
+						<figcaption>Relay<br /><br /></figcaption></a>
+					</div>
+
 				</div>
 			</div>
 			<div class="rightSide"></div>
