--- a/sito/INGLESE/logininglese.html
+++ b/sito/INGLESE/logininglese.html
@@ -114,9 +114,9 @@
 				<div class="p">
 					<form >
 						<h1>Sign in</h1>
-						<input type="text" id="username" placeholder="Nome (da 8 a 20 caratteri)" name="username" maxlength="20" minlength="8" required>
-						<input type="password" id="password" placeholder="Password (minimo di 8 caratteri)" name="password" minlength="8" required>
-						<input type="button" value="Registrati" class="b" onclick="mostraMessaggio()">
+						<input type="text" id="username" placeholder="Name (8 to 20 characters)" name="username" maxlength="20" minlength="8" required>
+						<input type="password" id="password" placeholder="Password (minimum 8 characters)" name="password" minlength="8" required>
+						<input type="button" value="Sign in" class="b" onclick="mostraMessaggio()">
 						<!--<button type="submit" name="register">Registrati</button>-->
 					</form>
 				</div>
